--- a/index.html
+++ b/index.html
@@ -1,79 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
-    <link rel="shortcut icon" href="assets/cloudy.png" type="image/x-icon" />
-    <link rel="stylesheet" href="assets/style.css">
-    <script src="assets/script.js" defer></script>
-    <script src="https://kit.fontawesome.com/1a48c47b52.js" crossorigin="anonymous" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js" defer></script>
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">  
 
-<body>
-    <div class="container">
-        <div class="weather__header">
-            <form class="weather__search" method="get">
-                <input type="text" placeholder="Search for a city" class="weather__searchform">
-                <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </form>
-            <div class="weather__units">
-                <span class="unit__celsius active">&deg;C</span>
-                <span class="unit__fahrenheit">&deg;F</span>
+<div class="container">
+        <div class="weather-side">
+            <div class="weather-gradient"></div>
+            <div class="date-container">
+                <h2 class="date-dayname"></h2>
+                <span class="date-day"></span>
+                <i class="fa-solid fa-location-dot"></i>
+                <span class="location"></span>
+            </div>
+            <div class="weather-container">
+                <span class="weather-icon"></span>
+                <h1 class="weather-temp"></h1>
+                <h3 class="weather-desc"></h3>
             </div>
         </div>
-        <div class="weather__body">
-            <h1 class="weather__city">New York</h1>
-            <div class="weather__datetime">
-                <p>Monday, 10:00 AM</p>
+        <div class="info-side">
+            <div class="today-info-container">
+                <div class="today-info">
+                    <div class="humidity">
+                        <span class="title"><i class="fa-solid fa-droplet"></i> HUMIDITY</span>
+                        <span class="value"></span>
+                        <div class="clear"></div>
+                    </div>
+                    <div class="wind">
+                        <span class="title"><i class="fa-solid fa-wind"></i> WIND</span>
+                        <span class="value"></span>
+                        <div class="clear"></div>
+                    </div>
+                </div>
             </div>
-            <div class="weather__forecast">
-                <p>Cloudy</p>
+            <div class="week-container">
+                <ul class="week-list">
+                    <li>
+                        <span class="day-name"></span>
+                        <span class="day-temp"></span>
+                        <span class="day-icon"></span>
+                    </li>
+                    <li>
+                        <span class="day-name"></span>
+                        <span class="day-temp"></span>
+                        <span class="day-icon"></span>
+                    </li>
+                    <li>
+                        <span class="day-name"></span>
+                        <span class="day-temp"></span>
+                        <span class="day-icon"></span>
+                    </li>
+                    <li>
+                        <span class="day-name"></span>
+                        <span class="day-temp"></span>
+                        <span class="day-icon"></span>
+                    </li>
+                    <div class="clear"></div>
+                </ul>
             </div>
-            <div class="weather__icon">
-                <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="">
-            </div>
-            <p class="weather__temperature">
-                18&deg;
-            </p>
-            <div class="weather__minmax">
-                <p>Min: 12&deg;</p>
-                <p>Max: 16&deg;</p>
+            <div class="location-container">
+                
+                <input class="location-input" type="text" id="city" value="New York">
             </div>
         </div>
-        <div class="weather__info">
-            <div class="weather__card">
-                <i class="fa-solid fa-temperature-three-quarters"></i>
-                <div>
-                    <p>Real Feel</p>
-                    <p class="weather__realfeel">18&deg;</p>
-                </div>
-            </div>
-            <div class="weather__card">
-                <i class="fa-solid fa-droplet"></i>
-                <div>
-                    <p>Humidity</p>
-                    <p class="weather__humidity">60%</p>
-                </div>
-            </div>
-            <div class="weather__card">
-                <i class="fa-solid fa-wind"></i>
-                <div>
-                    <p>Wind</p>
-                    <p class="weather__wind">15 km/h</p>
-                </div>
-            </div>
-            <div class="weather__card">
-                <i class="fa-solid fa-stopwatch"></i>
-                <div>
-                    <p>Pressure</p>
-                    <p class="weather__pressure">1012 hPa</p>
-                </div>
-            </div>
-        </div>
+
     </div>
-</body>
 
-</html>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
