--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">  
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+    <link rel="stylesheet" href="assets/style.css">
 
 <div class="container">
         <div class="weather-side">
@@ -63,7 +64,7 @@
                 <input class="location-input" type="text" id="city" value="New York">
             </div>
         </div>
-
+     <script src="assets/script.js" defer></script>
     </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
